Fix: add title word-break in create colony wizard

--- a/src/modules/dashboard/components/CreateColonyWizard/StepSelectToken.css
+++ b/src/modules/dashboard/components/CreateColonyWizard/StepSelectToken.css
@@ -18,6 +18,10 @@
   font-weight: var(--weight-bold);
 }
 
+.title span {
+  word-break: break-word;
+}
+
 .tokenDetails {
   margin-top: 50px;
 }
